--- a/Down To Discuss/Base.lproj/Main.storyboard
+++ b/Down To Discuss/Base.lproj/Main.storyboard
@@ -289,15 +289,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfile.png" translatesAutoresizingMaskIntoConstraints="NO" id="HR5-a1-ASa">
-                                <rect key="frame" x="67" y="72" width="240" height="207"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="HR5-a1-ASa">
+                                <rect key="frame" x="67" y="28" width="240" height="207"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="lgK-Ym-bdv"/>
                                     <constraint firstAttribute="height" constant="207" id="vke-vj-nIr"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fourStars.png" translatesAutoresizingMaskIntoConstraints="NO" id="6no-jY-ac8">
-                                <rect key="frame" x="92" y="242" width="240" height="128"/>
+                                <rect key="frame" x="92" y="198" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="Xz8-EC-y8f"/>
                                     <constraint firstAttribute="height" constant="128" id="d3x-MN-AdA"/>
@@ -566,9 +566,32 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q5C-CO-YXU">
+                                        <rect key="frame" x="44" y="407" width="80" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="EDIT" backgroundImage="create.png">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgm-mv-xpa">
+                                        <rect key="frame" x="169" y="407" width="80" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="END" backgroundImage="cancelButton.png">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TMs-vH-u2M">
+                                <rect key="frame" x="61" y="304" width="256" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.7073993782722513" green="0.7073993782722513" blue="0.7073993782722513" alpha="0.047733820921985817" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -579,6 +602,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="descOwner" destination="TMs-vH-u2M" id="JsV-H1-oDH"/>
                         <outlet property="disNameOwner" destination="Mzx-1A-3Fk" id="i7f-cw-04F"/>
                         <outlet property="funTopicOwner" destination="qkF-9n-AQt" id="kcQ-ha-Syg"/>
                         <outlet property="intenseTopicOwner" destination="ti3-kt-gJh" id="gCP-Xh-D8h"/>
@@ -775,8 +799,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTD-Up-vZz">
-                                <rect key="frame" x="41" y="89" width="293" height="446"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jTD-Up-vZz">
+                                <rect key="frame" x="41" y="89" width="293" height="498"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yyd-50-Bnm">
                                         <rect key="frame" x="245" y="8" width="40" height="33"/>
@@ -817,13 +841,6 @@
                                         <rect key="frame" x="64" y="58" width="165" height="88"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5 pts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7k-B7-h51">
-                                        <rect key="frame" x="102" y="325" width="88" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y6h-Cd-mSl">
                                         <rect key="frame" x="32" y="286" width="205" height="31"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -832,32 +849,56 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6EF-TN-70m">
-                                        <rect key="frame" x="94" y="374" width="104" height="46"/>
+                                        <rect key="frame" x="32" y="424" width="104" height="46"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <state key="normal" title="CHAT" backgroundImage="create.png">
                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PsK-f6-hC6">
+                                        <rect key="frame" x="162" y="424" width="104" height="46"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <state key="normal" title="GO" backgroundImage="create.png">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7k-B7-h51">
+                                        <rect key="frame" x="102" y="395" width="88" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohZ-fX-CLT">
+                                        <rect key="frame" x="22" y="325" width="248" height="62"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="446" id="3fs-2C-pVv"/>
+                                    <constraint firstAttribute="height" constant="498" id="3fs-2C-pVv"/>
                                     <constraint firstAttribute="width" constant="293" id="Eez-tM-h4a"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="0.051390735815602835" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="jTD-Up-vZz" firstAttribute="centerY" secondItem="THR-O8-Uiq" secondAttribute="centerY" id="cgN-jf-j9W"/>
+                            <constraint firstItem="jTD-Up-vZz" firstAttribute="centerY" secondItem="THR-O8-Uiq" secondAttribute="centerY" constant="4.5" id="cgN-jf-j9W"/>
                             <constraint firstItem="jTD-Up-vZz" firstAttribute="centerX" secondItem="THR-O8-Uiq" secondAttribute="centerX" id="eWR-7n-8U7"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="desInfo" destination="ohZ-fX-CLT" id="mrN-7S-Htb"/>
                         <outlet property="disTitle" destination="22j-TI-JnR" id="jeh-W5-iQA"/>
                         <outlet property="funTop" destination="T9L-Kf-6mm" id="Ypj-i3-1GL"/>
                         <outlet property="intenseTop" destination="y6h-Cd-mSl" id="rIg-04-dqd"/>
                         <outlet property="pPic" destination="QNj-xj-Q0L" id="pHf-3x-EKh"/>
+                        <outlet property="pointAmt" destination="M7k-B7-h51" id="rMA-Gf-vdC"/>
                         <outlet property="sRating" destination="HcE-g9-xmt" id="KLQ-bS-ctx"/>
                     </connections>
                 </viewController>
@@ -914,12 +955,12 @@
     </scenes>
     <resources>
         <image name=" Back Arrow.png" width="24" height="24"/>
+        <image name="6.jpg" width="1280" height="957"/>
         <image name="Rectangle.png" width="320" height="54"/>
         <image name="addMeetup" width="30" height="30"/>
         <image name="blueCircle.png" width="256" height="256"/>
         <image name="cancelButton.png" width="140" height="63"/>
         <image name="create.png" width="140" height="63"/>
-        <image name="defaultProfile.png" width="200" height="203"/>
         <image name="emptyStar.png" width="200" height="200"/>
         <image name="fourStars.png" width="360" height="216"/>
         <image name="homeIcon" width="30" height="30"/>
@@ -928,6 +969,6 @@
         <image name="x-mark-3-xxl" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="j47-iS-dB2"/>
+        <segue reference="uzD-b2-Ad9"/>
     </inferredMetricsTieBreakers>
 </document>
